correction pb zone grise description collapse

--- a/src/css/collapse.scss
+++ b/src/css/collapse.scss
@@ -53,6 +53,9 @@ transition: height 200ms;
 // position : relative;
 // top: 1;
 border-radius: 5px;
+position: relative;
+top: -0.3rem;
+z-index: -1;
 
 // animation: apparition 2.0s linear;
 }
